@@ -88,7 +88,7 @@
 categories A and B when A or B is excluded</label>
    <p>
    Exclude posts older than <input type='text' name="collapsCat[<?php echo
-$number ?>][olderThan] id="collapsCat-olderThan-<?php echo $number ?>" size='3' value='<?php echo $olderThan ?>'></input> days
+$number ?>][olderThan]" id="collapsCat-olderThan-<?php echo $number ?>" size='3' value='<?php echo $olderThan ?>'></input> days
    </p>
    <p>
    <input type="checkbox" name="collapsCat[<?php echo $number
